[package]
name = "aetherflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords = ["actor", "concurrent", "thread-per-core", "low-latency"]
categories = ["concurrency", "asynchronous"]
description = "A high-performance, thread-per-core actor runtime for Rust. Messages move with zero-copy ownership, mailboxes are lock-free, and isolation is proven at compile time — so the hot path has no locks, no GC, and no atomic refcounts. Flow at the speed of hardware."

[dependencies]
# Best-effort core pinning: real sched_setaffinity on Linux, graceful no-op on macOS.
core_affinity = "0.8"

[dev-dependencies]
# Stage 0 ベンチのベースライン比較用(work-stealing / 実 actor FW)。
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
kameo = "0.21"
# 総合力検証(P0)の比較相手: kompact = 高速 Rust MP(cross-platform)。
kompact = "0.11"

# glommio = io_uring ベース(Linux 専用)。既製 thread-per-core + 薄 actor に対する本丸比較。
[target.'cfg(target_os = "linux")'.dev-dependencies]
glommio = "0.9"

# Loom = 並行インターリーブの網羅探索(`--cfg aetherflow_loom` の時だけリンクされる = 本番に入らない)。
# cfg 名を crate 固有にしているのは、RUSTFLAGS の --cfg が依存クレートにも伝播し、
# 素の `loom` だと concurrent-queue 等が壊れるため(crossbeam_loom と同じ回避策)。
[target.'cfg(aetherflow_loom)'.dependencies]
loom = "0.7"

# 独自 cfg なので rustc に既知だと教える(でないと unexpected_cfgs 警告 → CI の -D warnings で落ちる)。
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(aetherflow_loom)'] }

[[bench]]
name = "latency"
harness = false
